@@ -60,7 +60,13 @@ class Document( qt.QObject ):
         """
         
         retn = operation.do(self)
-        self.historyundo.append(operation)
+        
+        if self.historybatch:
+            # in batch mode, create an OperationMultiple for all changes
+            self.historyundo[-1].addOperation(operation)
+        else:
+            # standard mode
+            self.historyundo.append(operation)
         self.historyredo = []
         self.setModified()
         return retn
@@ -68,8 +74,20 @@ class Document( qt.QObject ):
     def clearHistory(self):
         """Clear any history."""
         
+        self.historybatch = False
         self.historyundo = []
         self.historyredo = []
+        
+    def batchHistory(self, batch=True):
+        """Enable/disable batch history mode.
+        
+        In this mode the user applies a blank OperationMultiple to the doc, then
+        switches batchHistory on. Further updates are collected on the OperationMultiple
+        until batchHistory is set to False.
+        
+        This allows multiple operations to be batched up for simple undo.
+        """
+        self.historybatch = batch
         
     def undoOperation(self):
         """Undo the previous operation."""
@@ -394,90 +412,3 @@ class Document( qt.QObject ):
 
         # return widget
         return obj
-
-    def importFITS(self, dsname, filename, hdu,
-                   datacol = None, symerrcol = None,
-                   poserrcol = None, negerrcol = None,
-                   linked = False):
-        """Import dataset from FITS file.
-
-        dsname is the name of the dataset
-        filename is name of the fits file to open
-        hdu is the number/name of the hdu to access
-
-        if the hdu is a table, datacol, symerrcol, poserrcol and negerrcol
-        specify the columns containing the data, symmetric error,
-        positive and negative errors.
-
-        linked specfies that the dataset is linked to the file
-        """
-
-        try:
-            import pyfits
-        except ImportError:
-            raise RuntimeError, ( 'PyFITS is required to import '
-                                  'data from FITS files' )
-
-        f = pyfits.open(filename, 'readonly')
-        rhdu = f[hdu]
-        data = rhdu.data
-
-        try:
-            # raise an exception if this isn't a table
-            rhdu.get_coldefs()
-
-            datav = None
-            symv = None
-            posv = None
-            negv = None
-
-            # read the columns required
-            if datacol != None:
-                datav = data.field(datacol)
-            if symerrcol != None:
-                symv = data.field(symerrcol)
-            if poserrcol != None:
-                posv = data.field(poserrcol)
-            if negerrcol != None:
-                negv = data.field(negerrcol)
-
-            # actually create the dataset
-            ds = datasets.Dataset(data=datav, serr=symv, perr=posv, nerr=negv)
-
-        except AttributeError:
-            # Import a 2D image
-            if ( datacol != None or symerrcol != None or poserrcol != None
-                 or negerrcol != None ):
-                print "Warning: ignoring columns as import 2D dataset"
-
-            header = rhdu.header
-
-            try:
-                # try to read WCS for image, and work out x/yrange
-                wcs = [header[i] for i in ('CRVAL1', 'CRPIX1', 'CDELT1',
-                                           'CRVAL2', 'CRPIX2', 'CDELT2')]
-
-                # ximage = (xpix-crpix)*cdelt + crval
-                rangex = ( (data.shape[1]-wcs[1])*wcs[2] + wcs[0],
-                           (0-wcs[1])*wcs[2] + wcs[0])
-                rangey = ( (0-wcs[4])*wcs[5] + wcs[3],
-                           (data.shape[0]-wcs[4])*wcs[5] + wcs[3] )
-
-                print "xrange", rangex
-                print "yrange", rangey
-                rangex = (rangex[1], rangex[0])
-
-            except KeyError:
-                # no / broken wcs
-                rangex = None
-                rangey = None
-
-            ds = datasets.Dataset2D(data, xrange=rangex, yrange=rangey)
-
-        if linked:
-            ds.linked = datasets.LinkedFITSFile(dsname, filename, hdu,
-                                                [datacol, symerrcol,
-                                                poserrcol, negerrcol])
-
-        self.setData(dsname, ds)
-        f.close()
